create stylesheet, link in head of website

--- a/branching-website.html
+++ b/branching-website.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Branching Practice Site</title>
-  </head>
-  <body>
-    <h1>Branching</h1>
-    <h2>A website to practice branching with Git<h2>
+
+<head>
+  <link href="css/styles.css" rel="stlesheet" type="text/css" <title>Branching Practice Site</title>
+</head>
+
+<body>
+  <h1>Branching</h1>
+  <h2>A website to practice branching with Git<h2>
       <p>This page has been created in order to practice branching with Git and Github. By creating branches we can work on different versions of the same code in th same repository simultaneously!</p>
   </body>
 </html>
