--- a/branching-website.html
+++ b/branching-website.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link href="css/styles.css" rel="stlesheet" type="text/css" <title>Branching Practice Site</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css" <title>Branching Practice Site</title>
 </head>
 
 <body>
